testdata/test/resources/com/yafred/asn1/test/should_fail/import_from_itself.asn
-- FAILS: module imports from itself

My-Module DEFINITIONS ::=


BEGIN

IMPORTS My-Integer 
FROM My-Module;

My-Integer ::= INTEGER

END
